feat: add normalized envelopes and transformations
